--- a/TestForKids/FinalGrade.xaml
+++ b/TestForKids/FinalGrade.xaml
@@ -36,10 +36,12 @@
         <TextBlock FontSize="19" Text="Perfect" x:Name="Notes" Grid.Row="0" VerticalAlignment="Top" Margin="10,0,-10,0"
             />
 
-        <Image x:Name="angryEmojiImage"
-               Grid.Row="1" Margin="0,109,544,-1" Grid.RowSpan="2"
-               />
-
+        <Image x:Name="angryEmojiImage" Source="Images\מקיא.jpg"
+       Grid.Row="1" Margin="0,109,544,-1" Grid.RowSpan="2" Visibility="Collapsed"
+       />
+        <Image x:Name="Perfect_image" Source="Images\PerfectImage.jpg"
+       Grid.Row="1" Margin="0,109,544,-55" Grid.RowSpan="2" Visibility="Collapsed"
+       />
 
 
         <MediaElement x:Name="Perfect" Source="Sound\correcto_Xgyp04B.mp3" LoadedBehavior="Manual" />
