--- a/TestForKids/App.xaml
+++ b/TestForKids/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TestForKids"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/MainWithFrame.xaml">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
